force-app/main/default/objects/custom_create379__c/custom_create379__c.object-meta.xml
<CustomObject>
    <label>Custom created object379</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects379</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>