force-app/main/default/objects/custom_create379__c/fields/custom_create_379field508__c.field-meta.xml
<CustomField>
    <fullName>custom_create_379field508__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 379field508</label>
    <type>Checkbox</type>
</CustomField>